--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -816,7 +816,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -837,7 +837,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -858,7 +858,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00 </strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -880,7 +880,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -902,7 +902,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -923,7 +923,7 @@
                 <img src="./images/zip-1.png" alt="zip">
                 <img src="./images/zip-2.png" alt="zip">
                 <p class="free-months"><span class="own">own</span> it now, up to 6 months interest free <a
-                        href="#"><u>learn
+                        href="./contact.html"><u>learn
                             more</u></a>
                 </p>
             </div>
@@ -956,7 +956,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -977,7 +977,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -998,7 +998,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1019,7 +1019,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1040,7 +1040,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1088,7 +1088,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1109,7 +1109,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1130,7 +1130,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1151,7 +1151,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1172,7 +1172,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1218,7 +1218,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1239,7 +1239,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1260,7 +1260,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1281,7 +1281,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1302,7 +1302,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1336,7 +1336,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1357,7 +1357,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1378,7 +1378,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1399,7 +1399,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
@@ -1420,7 +1420,7 @@
                         <p class="card-info">EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...</p>
                         <del>$499.00</del>
                         <strong>$499.00</strong>
-                        <button class="hidden-btn" href="#"> <img class="shop-basket" src="images/shop (2).png" alt="">
+                        <button class="hidden-btn"> <img class="shop-basket" src="images/shop (2).png" alt="">
                             Add
                             To
                             Cart</button>
