--- a/checkout.html
+++ b/checkout.html
@@ -894,30 +894,32 @@
             <aside>
                 <h3 class="bordr-bottm">Order Summary</h3>
                 <p class="black-clr select-img select-two">2 Items in Cart</p>
-
-                <div class="cart-info">
-                    <div class="table-img"><img src="./images/aside-desck.png" alt="descktop"></div>
-                    <div class="table-p">
-                        <p>MSI MEG Trident X 10SD-1012AU Intel i7 10700K, 2070 SUPER...</p>
-                        <p><span class="gray">
-                                Qty 1</span> <strong class="card-price">$3,799.00</strong></p>
-                    </div>
-
-
-
-                    <div class="cart-info">
-                        <div class="table-img"><img src="./images/aside-computer.png" alt="descktop"></div>
-                        <div class="table-p">
-                            <p>MSI MEG Trident X 10SD-1012AU Intel i7 10700K, 2070 SUPER...</p>
+                <div class="flx-column">
+                    <div class="flex-gap">
+                        <img src="./images/aside-desck.png" alt="descktop">
+                        <div class="order-info">
+                            <p class="order-summary-p">MSI MEG Trident X 10SD-1012AU Intel i7 10700K, 2070 SUPER...</p>
                             <p><span class="gray">
-                                    Qty 1</span> <strong class="card-price">$3,799.00</strong></p>
+                                    Qty 1</span> <strong class="card-price">$3,799.00</strong>
                         </div>
-
-
-
                     </div>
 
 
+
+                    <div class="flex-gap">
+                        <img src="./images/aside-computer.png" alt="descktop">
+                        <div class="order-info">
+                            <p class="order-summary-p">MSI MEG Trident X 10SD-1012AU Intel i7 10700K, 2070 SUPER...</p>
+                            <p><span class="gray">
+                                    Qty 1</span> <strong class="card-price">$3,799.00</strong>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+                </div>
             </aside>
 
 
